| Summary: | ASTERISK-25912: chan_local passes AST_CONTROL_PVT_CAUSE_CODE without adding them to the local hangupcauses via ast_channel_hangupcause_hash_set | ||
| Reporter: | Jaco Kroon (jkroon) | Labels: | |
| Date Opened: | 2016-04-11 12:27:26 | Date Closed: | 2016-04-12 10:24:41 |
| Priority: | Critical | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_local |
| Versions: | 11.21.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | asterisk on linux, no DAHDI | Attachments: | ( 0) dialplan.txt ( 1) execution.txt |
| Description: | An extract of what we're seeing probably best describes the problem. We channel a lot of calls via Local/ channels for various reasons, we need to be able to get the SIP cause code for a hangup off of one of those Local/ channels. Basically we execute on IAX/a, create a Local/b;1 and Local/b;2 channel, on Local/b;2 a Dial() gets executed after which in that point of execution we need the SIP code.
HANGUPCAUSES() does get set correctly on the IAX2 channel, but not on the "inner" Local channel. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-04-11 12:27:27.379-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Jaco Kroon (jkroon) 2016-04-11 12:29:30.158-0500 extracts from dialplan and actual execution of dialplan which illustrates the problem. | ||