chan_local: Fix hangupcauses not getting set on Local/ channels

ASTERISK-25912 #close

Change-Id: I9ec0d40bd0e8ff16ba9c3cfc4c1b52cc575f421b